# real-state-pro

./: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
.claude/: CLAUDE.md  CODE_PATTERNS.md  DATABASE_SCHEMA.md  MODULE_README_TEMPLATE.md  QUICK_START.md  README.md
app/: layout.tsx
app/(main)/: layout.tsx
app/(main)/dashboard/: page.tsx
app/(main)/propiedades/: page.tsx
bot/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
bot/src/: config.py
bot/src/agent/: agent.py  prompts.py
bot/src/models/: schemas.py
bot/src/real_state_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bot/src/services/: supabase_client.py  telegram.py  transcription.py
bot/src/webhook/: handlers.py
components/: site-header.tsx
components/sidebar/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
docs/: README.md  REALTIME.md  REALTIME_QUICKSTART.md
lib/hooks/: useSupabaseRealtime.example.tsx  useSupabaseRealtime.ts
lib/reactquery/: error-boundary.tsx  get-query-client.ts  providers.tsx
lib/supabase/: middleware.ts
lib/types/: .gitkeep
modules/bitacora/: README.md  migration.sql
modules/contratos/: README.md  migration.sql
modules/pagos/: README.md  migration.sql
modules/propiedades/: MIGRATIONS.md  README.md
temporal/: .dockerignore  .env.example  CHECKLIST.md  Dockerfile.api  Dockerfile.worker  EASYPANEL-SETUP.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
temporal/src/: api.ts  worker.ts
(+20 files in other folders)
