[project]
name = "real-state-bot"
version = "0.1.0"
description = "Telegram bot para gestión de arriendos con IA"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.11.0",
    "groq>=0.13.0",
    "telegramify-markdown>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
